@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!-- vim: set et sw=2 ts=2 sts=2 tw=79:
 
-     Copyright 2005, 2006, 2007, 2008, 2009
+     Copyright 2005, 2006, 2007, 2008, 2009, 2010
      Abdullah A, Toad King, Andrianto Effendy, Brian Marshall, Michael Ryan
 
      This file is part of GameFOX.
@@ -119,24 +119,6 @@
       <preference id="elements.quickpost.aftermessage"
         name="gamefox.elements.quickpost.aftermessage" type="int"/>
 
-      <!-- Sidebar -->
-      <preference id="sidebar.gamefaqsnav" name="gamefox.sidebar.gamefaqsnav"
-        type="bool"/>
-      <preference id="sidebar.userlinks" name="gamefox.sidebar.userlinks"
-        type="bool"/>
-      <preference id="sidebar.favorites" name="gamefox.sidebar.favorites"
-        type="bool"/>
-      <preference id="sidebar.search" name="gamefox.sidebar.search"
-        type="bool"/>
-      <preference id="sidebar.gotoboard" name="gamefox.sidebar.gotoboard"
-        type="bool"/>
-      <preference id="sidebar.login" name="gamefox.sidebar.login" type="bool"/>
-      <preference id="sidebar.accounts" name="gamefox.sidebar.accounts"
-        type="bool"/>
-      <preference id="sidebar.tags" name="gamefox.sidebar.tags" type="bool"/>
-      <preference id="sidebar.tracked" name="gamefox.sidebar.tracked"
-        type="bool"/>
-
       <!-- Context Menu -->
       <preference id="context.pagelist" name="gamefox.context.pagelist"
         type="bool"/>
@@ -170,7 +152,6 @@
       <tabs id="tabsElement" tabGroup="main">
         <tab id="pageTab" label="&pageTab.label;"/>
         <tab id="postingTab" label="&postingTab.label;"/>
-        <tab id="sidebarTab" label="&sidebarTab.label;"/>
         <tab id="contextTab" label="&contextTab.label;"/>
       </tabs>
 
@@ -383,32 +364,6 @@
                 </menulist>
               </hbox>
 
-            </groupbox>
-          </vbox>
-        </tabpanel>
-
-        <!-- Sidebar -->
-        <tabpanel orient="vertical" flex="1">
-          <vbox>
-            <groupbox>
-              <caption label="&sections.label;"/>
-
-              <checkbox label="&navLinks.label;"
-                preference="sidebar.gamefaqsnav"/>
-              <checkbox label="&userLinks.label;"
-                preference="sidebar.userlinks"/>
-              <checkbox label="&favoritesList.label;"
-                preference="sidebar.favorites"/>
-              <checkbox label="&gameSearch.label;"
-                preference="sidebar.search"/>
-              <checkbox label="&toBoardId.label;"
-                preference="sidebar.gotoboard"/>
-              <checkbox label="&loginForm.label;" preference="sidebar.login"/>
-              <checkbox label="&accountSwitcher.label;"
-                preference="sidebar.accounts"/>
-              <checkbox label="&tagsList.label;" preference="sidebar.tags"/>
-              <checkbox label="&trackedList.label;"
-                preference="sidebar.tracked"/>
             </groupbox>
           </vbox>
         </tabpanel>
