@@ -144,5 +144,8 @@
       <iframe src="chrome://gamefox/content/tracked.xul" style="width: 100%; height: 300px;"
           type="content"/>
     </div>
+
+    <div class="strip"><a href="chrome://gamefox/content/options/sidebar.xul"
+            id="configure-link">Configure Sidebar</a></div>
 </body>
 </html>
