@@ -2,7 +2,6 @@
 
 <!ENTITY pageTab.label "Page">
 <!ENTITY postingTab.label "Posting">
-<!ENTITY sidebarTab.label "Sidebar">
 <!ENTITY contextTab.label "Context Menu">
 <!ENTITY boardSettingsTab.label "Board Settings">
 
@@ -66,19 +65,6 @@
 <!ENTITY toLastPost.label "Go to last post">
 <!ENTITY toSamePage.label "Go back to same page">
 <!ENTITY toFirstPage.label "Go to first page">
-
-<!-- Sidebar -->
-<!ENTITY sections.label "Sections">
-
-<!ENTITY navLinks.label "Navigation links">
-<!ENTITY userLinks.label "User links">
-<!ENTITY favoritesList.label "Favorite boards list">
-<!ENTITY gameSearch.label "Game search">
-<!ENTITY toBoardId.label "Go to board ID">
-<!ENTITY loginForm.label "Login form">
-<!ENTITY accountSwitcher.label "Account switcher">
-<!ENTITY tagsList.label "Tags list">
-<!ENTITY trackedList.label "Tracked topics list">
 
 <!-- Context Menu -->
 <!ENTITY mainMenu.label "Main">
